--- a/index.html
+++ b/index.html
@@ -9,17 +9,36 @@
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="container">
-        <h1>JavaScript - Drag and Drop</h1>
-        <div class="drop-targets">
-            <div class="box">En la tienda
-                <img src="asset/cesta.jpg" class="item" id="item" draggable="true">
-                
+    <header>
+        <section class="container__header">
+            <h1>Reto 2 - Drag and Drop</h1>
+        </section>
+    </header>
+    <main>
+        <div class="container">
+            <div class="drop-targets">
+                <div class="box">
+                    <p class="subtitle">En la tienda</p>
+                    <img src="asset/cesta.png" class="item" id="item" draggable="true">
+                    <img src="img/product1.png" class="item" id="item" draggable="true">
+                    <img src="img/product2.png" class="item" id="item" draggable="true">
+                    <img src="img/product3.png" class="item" id="item" draggable="true">
+                    <img src="img/product4.png" class="item" id="item" draggable="true">
+                    <img src="img/product5.png" class="item" id="item" draggable="true">
+
+                </div>
+                <div class="box">Añadido al carro</div>
+                <div class="box">Pasar por caja</div>
             </div>
-            <div class="box">Pasar por caja</div>
-            <div class="box">Comprado</div>
         </div>
-    </div>
+
+    </main>
+
+    <footer>
+        <p class="container__text">
+            
+        </p>
+    </footer>
     <script src="js/main.js"></script>
 </body>
 </html>
